--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-awesome-modal": "^2.0.5",
     "react-calendar": "^3.1.0",
     "react-csv-reader": "^3.1.1",
+    "react-date-range": "^1.1.3",
     "react-datepicker": "^3.3.0",
     "react-dom": "^16.13.1",
     "react-export-excel": "^0.5.3",
